[project]
name = "flask-session-custom"
description = "Server-side session support for Flask"
readme = "README.md"
license = {text = "BSD-3-Clause"}
maintainers = [{name = "Thang Tran", email = "thangtd1993@gmail.com"}]
authors = [{name = "Thang Tran", email = "thangtd1993@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.7"
dependencies = [
    "flask>=2.2",
    "cachelib",
    "itsdangerous",
    "Werkzeug"
]
dynamic = ["version"]

[project.urls]
Changes = "https://github.com/thangit93/flask-session-pynamodb/blob/main/CHANGES.rst"
"Source Code" = "https://github.com/thangit93/flask-session-pynamodb"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "flask_session_pynamodb"

[tool.flit.sdist]
include = [
    "CHANGES.rst",
    "LICENSE.rst",
]
exclude = ["docs/_build/"]
